--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,23 +24,18 @@ on:
         required: false
         default: false
       target_os:
-        description: Target OS (android|emscripten|ios|linux|mac|win)
+        description: Target OS (android|ios|linux|mac|wasm|win)
         type: string
         required: true
       target_cpu:
         description: Target (CPU arm|arm64|x64|x86|wasm)
         type: string
         required: true
-      target_environment:
-        description: Target environment (device|catalyst|musl|simulator)
+      target_libc:
+        description: Target libc (empty string or "musl")
         type: string
         required: false
         default: ''
-      emsdk_version:
-        description: Emscripten SDK
-        type: string
-        required: false
-        default: 3.1.72
     outputs:
       artifact:
         description: "The name of the artifact"
@@ -50,7 +45,7 @@ jobs:
   build:
     outputs:
       artifact: ${{ steps.init.outputs.artifact }}
-    runs-on: ${{ (inputs.target_os == 'ios' || inputs.target_os == 'mac') && 'macos-14' || inputs.target_os == 'win' && 'windows-2022' || 'ubuntu-22.04' }}
+    runs-on: ${{ (inputs.target_os == 'ios' || inputs.target_os == 'mac') && 'macos-latest' || inputs.target_os == 'win' && 'windows-2019' || 'ubuntu-22.04' }}
     steps:
       - name: Initialize
         id: init
@@ -58,9 +53,9 @@ jobs:
         run: |
           ARTIFACT="pdfium"
           [ "${{inputs.enable_v8}}" == "true" ] && ARTIFACT="$ARTIFACT-v8"
-          [ "${{inputs.target_os}}" != "emscripten" ] && ARTIFACT="$ARTIFACT-${{inputs.target_os}}"
-          [ "${{inputs.target_environment}}" != "" ] && ARTIFACT="$ARTIFACT-${{inputs.target_environment}}"
-          ARTIFACT="$ARTIFACT-${{inputs.target_cpu}}"
+          ARTIFACT="$ARTIFACT-${{inputs.target_os}}"
+          [ "${{inputs.target_libc}}" != "" ] && ARTIFACT="$ARTIFACT-${{inputs.target_libc}}"
+          [ "${{inputs.target_os}}" != "${{inputs.target_cpu}}" ] && ARTIFACT="$ARTIFACT-${{inputs.target_cpu}}"
           [ "${{inputs.is_debug}}" == "true" ] && ARTIFACT="$ARTIFACT-debug"
           echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
       - name: Checkout this repo
@@ -72,10 +67,9 @@ jobs:
           PDFium_IS_DEBUG=${{ inputs.is_debug }}
           PDFium_TARGET_CPU=${{ inputs.target_cpu }}
           PDFium_TARGET_OS=${{ inputs.target_os }}
-          PDFium_TARGET_ENVIRONMENT=${{ inputs.target_environment }}
+          PDFium_TARGET_LIBC=${{ inputs.target_libc }}
           PDFium_ENABLE_V8=${{ inputs.enable_v8 }}
           PDFium_VERSION=${{ inputs.version }}
-          EMSDK_VERSION=${{ inputs.emsdk_version }}
           MUSL_URL=${{ secrets.MUSL_URL }}
           END
           steps/00-environment.sh
@@ -86,7 +80,6 @@ jobs:
       - name: Checkout PDFium
         run: steps/02-checkout.sh
         shell: bash
-        timeout-minutes: 15
       - name: Apply patches
         run: steps/03-patch.sh
         shell: bash
@@ -116,5 +109,5 @@ jobs:
           name: ${{ steps.init.outputs.artifact }}
           path: staging/
       - name: Test
-        run: steps/09-test.sh
+        run: steps/08-test.sh
         shell: bash
